--- a/fake.labo.html
+++ b/fake.labo.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <h1>Dit is fake labo</h1>
-<p>Hier komen de opdrachten</p>
+<p>Hier komen zogezegd de opdrachten</p>
 </body>
 </html>
